--- a/Python/file_handling.ipynb
+++ b/Python/file_handling.ipynb
@@ -207,6 +207,7 @@
     }
    ],
    "source": [
+    "# We cannot write files when it is open in read mode.\n",
     "with open(\"abc.txt\") as file:\n",
     "    content = file.readlines()[:3]\n",
     "    file.write(\"Pakistan Zindabad\")\n",
@@ -215,10 +216,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnsupportedOperation",
+     "evalue": "not readable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnsupportedOperation\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-e9896d3a204c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"abc2.txt\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"w\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mcontent\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnsupportedOperation\u001b[0m: not readable"
+     ]
+    }
+   ],
    "source": [
+    "# We can not readlines file when open in write mode.\n",
     "with open(\"abc2.txt\", mode=\"w\") as file:\n",
     "    content = file.readlines()\n",
     "    print(content)\n",
@@ -227,20 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# we use mode = w where we just want to update or get the new data and we dont borther about old data.\n",
     "\n",
     "with open(\"abc2.txt\",mode=\"w\") as file:\n",
-    "    file.write(\"Paksitan Zindabad\")\n",
-    "    print()"
+    "    file.write(\"Paksitan Zindabad\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,9 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"abc4.txt\", mode = \"a+\") as file:\n",
     "    file.write(\"Hello World \\n\")\n",
@@ -264,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -325,10 +347,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12495d96448>"
+       "<matplotlib.image.AxesImage at 0x2b068c608c8>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -388,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
