adding new changes to files

--- a/Python/PracticePython_3.ipynb
+++ b/Python/PracticePython_3.ipynb
@@ -324,6 +324,167 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Wahaj', 'Nabeel', 'Adeel', 'Kibria', 'Talha', 'Raheel', 'Waqas', 'Grapes', 'Wajahat']\n"
+     ]
+    }
+   ],
+   "source": [
+    "values = [ \"Wahaj\",\"Nabeel\",\"Adeel\",\"Kibria\",\"Talha\",\"Raheel\",\"Waqas\",\"Wajahat\"]\n",
+    "values.insert(-1,\"Grapes\")\n",
+    "print(values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Join() method\n",
+    "We should use **join()** method when concatenating two or more than two strings because it uses **less processing**.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello there !..........Wajahat\n",
+      "Hello there !..........Talha\n",
+      "Hello there !..........Ali\n",
+      "Hello there !..........Kibria\n",
+      "Hello there !..........Waqas\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"Wajahat\",\"Talha\",\"Ali\",\"Kibria\",\"Waqas\"]\n",
+    "for name in names:\n",
+    "    # print(\"Hello there !, \" + name)\n",
+    "    print(\"..........\".join([\"Hello there !\",name])) # We can also use the join method for joining two strings.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wajahat,Talha,Ali,Kibria,Waqas\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"Wajahat\",\"Talha\",\"Ali\",\"Kibria\",\"Waqas\"]\n",
+    "print(\",\".join(names))\n",
+    "new_string = \",\".join(names)\n",
+    "print(type(new_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E:\\Microsoft Python\\Python files\n"
+     ]
+    }
+   ],
+   "source": [
+    "location_of_files = \"E:\\Microsoft Python\\Python files\"\n",
+    "print(location_of_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E:\\Microsoft Python\\Python files\\example.txt\n",
+      "hello world ! \n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "location_of_files = \"E:\\\\Microsoft Python\\\\Python files\" # We use double slashes to escape the next line code. \n",
+    "file_name = \"example.txt\"\n",
+    "print(location_of_files + \"\\\\\" + file_name )\n",
+    "\n",
+    "with open(os.path.join(location_of_files, file_name)) as file:\n",
+    "    print(file.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Talha age is 22\n",
+      "Talha age is 22\n",
+      "Talha age is 22\n",
+      "Talha age is 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Different formats for string concatination.\n",
+    "\n",
+    "name = \"Talha\"\n",
+    "age = 22\n",
+    "print(\"%s age is %d\" % (name,age))\n",
+    "print(\"{0:s} age is {1:d}\".format(name,age))\n",
+    "print(\"{} age is {}\".format(name,age))\n",
+    "print(f\"{name} age is {age}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
