--- a/Python/PracticePython_4.ipynb
+++ b/Python/PracticePython_4.ipynb
@@ -234,39 +234,109 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Operators in Python and Their Precedence.\n",
+    "Python follows  **PEMDAS**  rule.  \n",
+    "\n",
+    "### **PEMDAS**\n",
+    "\n",
+    "- Parenthesis()\n",
+    "- Exponent **\n",
+    "- Multiplication *\n",
+    "- Division /, floor Division //, Modulus %\n",
+    "- Addition +\n",
+    "- Subtraction -"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Division operators\n",
+    "- /\n",
+    "- //"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normal division result: 2.3333333333333335\n",
+      "Integer Division result: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# integer division.\n",
+    "y = 7/3\n",
+    "print(f\"Normal division result: {y}\")\n",
+    "y = 7//3\n",
+    "print(f\"Integer Division result: {y}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Power Operator.\n",
+    "- **"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result : 8\n",
+      "result : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = 2**3\n",
+    "x = 2**2\n",
+    "print(f\"result : {y}\")\n",
+    "print(f\"result : {x}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Operator associativity.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90 90 90\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=2\n",
+    "y=3\n",
+    "z=5\n",
+    "x=y=z=90\n",
+    "print(x,y,z)"
+   ]
   },
   {
    "cell_type": "code",
