--- a/Python/PracticePython_3.ipynb
+++ b/Python/PracticePython_3.ipynb
@@ -470,25 +470,249 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Differnce between Lists Comphrension and Generators expressions.\n",
+    "The list is stored in memory(RAM) while the generators are not stored in memory.\n",
+    "- Generators are memory efficient while the lists are faster."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3]\n",
+      "<generator object <genexpr> at 0x00000241464DACC8>\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List Comphernsions.\n",
+    "\n",
+    "xyz = [ i for i in range(0,4) ]\n",
+    "print(xyz)\n",
+    "\n",
+    "# Generator Expressions.\n",
+    "\n",
+    "xyz = ( i for i in range(0,4) )\n",
+    "print(xyz)\n",
+    "\n",
+    "# Gernerators are itreatable objects.\n",
+    "\n",
+    "for i in xyz:\n",
+    "    print(i)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n",
+      "<class 'set'>\n",
+      "[1, 2, 3, 4]\n",
+      "<class 'list'>\n",
+      "(1, 2, 3, 4)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sets are unique values and can be modified.\n",
+    "s = {1,2,3,3,2,4}\n",
+    "print(s)\n",
+    "print(type(s))\n",
+    "\n",
+    "# Lists are changeable and can be modified\n",
+    "s = [1,2,3,4]\n",
+    "print(s)\n",
+    "\n",
+    "print(type(s))\n",
+    "\n",
+    "# tuples cannot be changed or modified\n",
+    "s = (1,2,3,4)\n",
+    "print(s)\n",
+    "print(type(s))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Example the numbers that are divisible by five.\n",
+    "\n",
+    "list_input = [50,5,6,45,56,34,55,100,5050,3,4]\n",
+    "\n",
+    "def div_by_five(num):\n",
+    "    if (num % 5) == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "xyz = ( i for i in list_input if div_by_five(i) )\n",
+    "\n",
+    "# Below is explanation of the code written above works.\n",
+    "\n",
+    "# xyz = []\n",
+    "# for i in list_input():\n",
+    "#     if div_by_five(i):\n",
+    "#         xyz.append(i)\n",
+    "\n",
+    "# Below Gerators are iteratable.\n",
+    "# for i in xyz:\n",
+    "#     print(i)\n",
+    "\n",
+    "# [ print(i) for i in xyz]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object <genexpr> at 0x0000024145F311C8>\n",
+      "[50, 5, 45, 55, 100, 5050]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# xyz is a gerator object.\n",
+    "print(xyz)\n",
+    "\n",
+    "# Below is the list comphrension code.\n",
+    "xyz = [ i for i in list_input if div_by_five(i) ] # This code is makeing the list of the numbers divisible by five.\n",
+    "print(xyz)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object <genexpr> at 0x0000024145F312C8>\n",
+      "[[(0, 0), (1, 0), (2, 0), (3, 0), (4, 0)], [(0, 1), (1, 1), (2, 1), (3, 1), (4, 1)], [(0, 2), (1, 2), (2, 2), (3, 2), (4, 2)], [(0, 3), (1, 3), (2, 3), (3, 3), (4, 3)], [(0, 4), (1, 4), (2, 4), (3, 4), (4, 4)]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_input = [50,5,6,45,56,34,55,100,5050,3,4]\n",
+    "\n",
+    "def div_by_five(num):\n",
+    "    if (num % 5) == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "xyz = [ i for i in list_input if div_by_five(i) ]\n",
+    "\n",
+    "\n",
+    "# xyz = [[(i,ii) for i in range(5)] for ii in range(5)] # list of tuples.\n",
+    "# xyz = [[[i,ii] for i in range(5)] for ii in range(5)] # list of lists.\n",
+    "xyz = ( [(i,ii) for i in range(5)] for ii in range(5) ) # Generator Object and we can iterate over it.\n",
+    "print(xyz)\n",
+    "\n",
+    "print([i for i in xyz])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object <genexpr> at 0x000002414686B148>\n",
+      "(0, 0)\n",
+      "(1, 0)\n",
+      "(2, 0)\n",
+      "(3, 0)\n",
+      "(4, 0)\n",
+      "(0, 1)\n",
+      "(1, 1)\n",
+      "(2, 1)\n",
+      "(3, 1)\n",
+      "(4, 1)\n",
+      "(0, 2)\n",
+      "(1, 2)\n",
+      "(2, 2)\n",
+      "(3, 2)\n",
+      "(4, 2)\n",
+      "(0, 3)\n",
+      "(1, 3)\n",
+      "(2, 3)\n",
+      "(3, 3)\n",
+      "(4, 3)\n",
+      "(0, 4)\n",
+      "(1, 4)\n",
+      "(2, 4)\n",
+      "(3, 4)\n",
+      "(4, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generator Expressions.\n",
+    "\n",
+    "xyz = ( ((i,ii) for i in range(0,5)) for ii in range(0,5)) # Always remember generators are not stored in RAM.\n",
+    "print(xyz)\n",
+    "for i in xyz:\n",
+    "    for ii in i:\n",
+    "        print(ii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object <genexpr> at 0x000002414686B148>\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "xyz = (print(i) for i in range(0,5))\n",
+    "print(xyz)\n",
+    "\n",
+    "# We did not have to use print statement because its already in gerator object.\n",
+    "for i in xyz:\n",
+    "    i"
+   ]
   }
  ],
  "metadata": {
