--- a/Python/PracticePython_3.ipynb
+++ b/Python/PracticePython_3.ipynb
@@ -689,14 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object <genexpr> at 0x000002414686B148>\n",
+      "<generator object <genexpr> at 0x000002414686B2C8>\n",
       "0\n",
       "1\n",
       "2\n",
@@ -713,6 +713,20 @@
     "for i in xyz:\n",
     "    i"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
