--- a/Python/PracticePython_5.ipynb
+++ b/Python/PracticePython_5.ipynb
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -502,8 +502,8 @@
      "output_type": "stream",
      "text": [
       "Evens : [2, 6, 4, 8, 8, 6]\n",
-      "Doubles : [2, 6, 4, 8, 8, 6]\n",
-      "Sums : 34\n"
+      "Doubles : [4, 12, 8, 16, 16, 12]\n",
+      "Sums : 68\n"
      ]
     }
    ],
@@ -520,7 +520,7 @@
     "print(f\"Evens : {evens}\")\n",
     "\n",
     "# map(func, *iterables) --> map object\n",
-    "doubles = list(filter(lambda x: x*2,evens))\n",
+    "doubles = list(map(lambda x: x*2,evens))\n",
     "print(f\"Doubles : {doubles}\")\n",
     "\n",
     "\n",
